# ai-screenshot-namer

./: CHANGELOG.md  README.md  pyproject.toml
ai_screenshot_namer/: main.py  test_main.py
